// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders the component 1`] = `
<Card
  className="AssetCard"
  padding="default"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__inner-wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component in loading state 1`] = `
<Card
  className="AssetCard"
  padding="default"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <AssetCardSkeleton />
</Card>
`;

exports[`renders the component with actions 1`] = `
<Card
  className="AssetCard"
  padding="default"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__inner-wrapper"
  >
    <div
      className="AssetCard__header"
    >
      <Dropdown
        isOpen={false}
        onClose={[Function]}
        position="bottom-right"
        testId="cf-ui-dropdown"
        toggleElement={
          <button
            className="AssetCard__header__dropdown-button"
            onClick={[Function]}
            type="button"
          >
            <TabFocusTrap>
              <Icon
                color="secondary"
                icon="MoreHorizontalTrimmed"
                size="small"
                testId="cf-ui-icon"
              />
            </TabFocusTrap>
          </button>
        }
      >
        <DropdownList
          key=".0"
          testId="cf-ui-dropdown-list"
        >
          <DropdownListItem
            isActive={false}
            isDisabled={false}
            isTitle={true}
            testId="cf-ui-dropdown-list-item"
          >
            Actions
          </DropdownListItem>
          <DropdownListItem
            isActive={false}
            isDisabled={false}
            isTitle={false}
            onClick={[Function]}
            testId="cf-ui-dropdown-list-item"
          >
            Edit
          </DropdownListItem>
        </DropdownList>
      </Dropdown>
    </div>
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component with an additional class name 1`] = `
<Card
  className="AssetCard my-extra-class"
  padding="default"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__inner-wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component with status 1`] = `
<Card
  className="AssetCard"
  padding="default"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__inner-wrapper"
  >
    <div
      className="AssetCard__header"
    >
      <Tag
        style={
          Object {
            "marginLeft": "auto",
          }
        }
        tagType="negative"
        testId="cf-ui-tag"
      >
        archived
      </Tag>
    </div>
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;

exports[`renders the component without actions 1`] = `
<Card
  className="AssetCard"
  padding="default"
  selected={false}
  testId="cf-ui-asset-card"
  title="picture of a cat"
>
  <div
    className="AssetCard__inner-wrapper"
  >
    <div
      className="AssetCard__header"
    />
    <div
      className="AssetCard__content"
    >
      <Asset
        className="AssetCard__asset"
        src="http://placekitten.com/200/300"
        testId="cf-ui-asset"
        title="picture of a cat"
        type="image"
      />
    </div>
  </div>
</Card>
`;
